--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     ports:
       - "50075:50075"
   hive-server:
-    image: zanmato1984/hive
+    image: bde2020/hive
     env_file:
       - ./hadoop-hive.env
     environment:
@@ -57,8 +57,8 @@ services:
   hive-metastore-postgresql:
     image: bde2020/hive-metastore-postgresql:2.3.0
   atlas:
-    image: zanmato1984/atlas
-    # image: sburn/apache-atlas
+    #image: zanmato1984/atlas
+    image: sburn/apache-atlas:2.1.0
     ports:
       - "21000:21000"
       - "9026:9026"
